@@ -12,7 +12,7 @@ if USE_LINUX_JOY
 JOYSTICK_SRCS = joystick.c joydefs.c
 endif
 
-libarch_linux_a_SOURCES = ${NETWORK_SRCS} ${JOYSTICK_SRCS} findfile.c init.c
+libarch_linux_a_SOURCES = ${NETWORK_SRCS} ${JOYSTICK_SRCS} init.c
 
 EXTRA_libarch_linux_a_SOURCES = \
 ipx_bsd.c ipx_kali.c ipx_lin.c ipx_udp.c linuxnet.c ukali.c \
