@@ -1,4 +1,4 @@
-/* $Id: newmenu.c,v 1.19.2.4 2003-05-30 23:09:59 btb Exp $ */
+/* $Id: newmenu.c,v 1.19.2.5 2003-05-31 04:28:34 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -588,8 +588,6 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #include "palette.h"
 #include "game.h"
 #include "text.h"
-#include "findfile.h"
-
 #include "menu.h"
 #include "newmenu.h"
 #include "gamefont.h"
