@@ -1,5 +1,9 @@
 2003-05-30  Bradley Bell  <btb@icculus.org>
 
+	* arch/linux/Makefile.am, arch/linux/findfile.c,
+	include/findfile.h, main/kludge.c, main/mission.c, main/newmenu.c,
+	main/piggy.c: get rid of findfile stuff
+
 	* main/gameseq.c, main/menu.c, main/newmenu.c: improved demo/plr
 	loading
 
